--- a/src/app/media-item.component.html
+++ b/src/app/media-item.component.html
@@ -1,5 +1,5 @@
 <h2>{{ name }}</h2>
-<div>{{ wasWatched() }}</div>
+<div [textContent]="wasWatched()"></div>
 <div>Action</div>
 <div>2016</div>
 <div class="tools">
