add ngif to media-item

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,5 @@
     <p class="description">Keeping track of the media I want to watch.</p>
   </header>
   <mw-media-item [mediaItem]="firstMediaItem" (delete)="onMediaItemDelete($event)"></mw-media-item>
+  <mw-media-item [mediaItem]="secondMediaItem" (delete)="onMediaItemDelete($event)"></mw-media-item>
 </section>
