add ngclass for mediaItems (dynamic class for movies and series)

--- a/src/app/media-item-list.component.html
+++ b/src/app/media-item-list.component.html
@@ -1,6 +1,8 @@
 <section>
-  <mw-media-item 
+  <mw-media-item
     *ngFor="let mediaItem of mediaItems"
     [mediaItem]="mediaItem"
-    (delete)="onMediaItemDelete($event)"></mw-media-item>
+    (delete)="onMediaItemDelete($event)"
+    [ngClass]="{'medium-series': mediaItem.medium === 'Series', 'medium-movies': mediaItem.medium === 'Movies'}">
+  </mw-media-item>
 </section>
